added css to homepage

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,9 @@
             <li><%= link_to "Sign in", '#' %></li>
           </ul>
         </header>
-        <selection class="round">
+        <section class="round">
           <%= yield %>
-        </selection>
+        </section>
       <div>
   </body>
 </html>
