--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -77,3 +77,17 @@ nav ul li a:hover {
 }
 
 
+a.signup_button {
+	margin-left: auto;
+	margin-right: auto;
+	display: block;
+	text-align: center;
+	width: 190px;
+	color: #fff;
+	background: #006400;
+	font-size: 150%;
+	font-weight: bold;
+	padding: 20px;
+}
+
+
