--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -90,4 +90,9 @@ a.signup_button {
 	padding: 20px;
 }
 
+.round {
+	-moz-border-radius:	10px;
+	-webkit-border-radius:	10px;
+	border-radius:		10px;
 
+}
