--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -96,3 +96,18 @@ a.signup_button {
 	border-radius:		10px;
 
 }
+
+
+footer {
+	text-align: center;
+	margin-top: 10px;
+	width: 710px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+footer nav {
+	float: none;
+}
+
+
