--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,4 +6,4 @@
 		  sample application.
 		</p>
 
-		<%= link_to "Sign Up now!", '#', :class => "signup_button round" %>
+		<%= link_to "Sign Up now!", signup_path, :class => "signup_button round" %>
