+ form_for pre-fill comment

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,8 @@
 <h1>Sign up</h1>
 
+<!-- 'form_for' automatically fills in the 
+     fields with the attributes of the @user object. -->
+
 <%= form_for(@user) do |f| %>
   <div class="field">
     <%= f.label :name %><br />
