--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,24 +3,27 @@
 <!-- 'form_for' automatically fills in the 
      fields with the attributes of the @user object. -->
 
-<%= form_for(@user) do |f| %>
-  <div class="field">
-    <%= f.label :name %><br />
-    <%= f.text_field :name %>
-  </div>
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br />
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation, "Confirmation" %><br />
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
+     <%= form_for(@user) do |f| %>
+	     <%= render 'shared/error_messages' %>
+
+	     <div class="field">
+		     <%= f.label :name %><br />
+		     <%= f.text_field :name %>
+	     </div>
+	     <div class="field">
+		     <%= f.label :email %><br />
+		     <%= f.text_field :email %>
+	     </div>
+	     <div class="field">
+		     <%= f.label :password %><br />
+		     <%= f.password_field :password %>
+	     </div>
+	     <div class="field">
+		     <%= f.label :password_confirmation, "Confirmation" %><br />
+		     <%= f.password_field :password_confirmation %>
+	     </div>
+	     <div class="actions">
+		     <%= f.submit "Sign up" %>
+	     </div>
+     <% end %>
+
