--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,10 @@
   <body>
     <div class="container">
     	<%= render 'layouts/header' %>
-        <section class="round">
+	<section class="round">
+	<% flash.each do |key, value| %>
+		<div class="flash <%= key %>"><%= value %></div>
+	<% end %>
           <%= yield %>
         </section>
 	<%= render 'layouts/footer' %>
