--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title><%= title %></title>
-    <%= csrf_meta_tag %>
-    <!-- render helpers are used to render partials
-    	on the page, partials are *.html.erb files
-	which names begin with '_'. -->
-    <%= render 'layouts/stylesheets' %>
-  </head>
-  <body>
-    <div class="container">
-    	<%= render 'layouts/header' %>
-	<section class="round">
-	<% flash.each do |key, value| %>
-		<%= content_tag(:div, value, :class => "flash #{key}") %>
-	<% end %>
-          <%= yield %>
-        </section>
-	<%= render 'layouts/footer' %>
-	<%= debug(params) if Rails.env.development? %>
-      <div>
-  </body>
+	<head>
+		<title><%= title %></title>
+		<%= csrf_meta_tag %>
+		<!-- render helpers are used to render partials
+		on the page, partials are *.html.erb files
+		which names begin with '_'. -->
+		<%= render 'layouts/stylesheets' %>
+	</head>
+	<body>
+		<div class="container">
+			<%= render 'layouts/header' %>
+			<section class="round">
+			<% flash.each do |key, value| %>
+				<%= content_tag(:div, value, :class => "flash #{key}") %>
+			<% end %>
+			<%= yield %>
+			</section>			
+			<%= render 'layouts/footer' %>			
+			<%= debug(params) if Rails.env.development? %>					
+		</div>	
+	</body>
 </html>
