update signup form to user more general code

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
 fields with the attributes of the @user object. -->
 
 	<%= form_for(@user) do |f| %>
-		<%= render 'shared/error_messages' %>
+		<%= render 'shared/error_messages', :object => f.object %>
 
 		<div class="field">
 			<%= f.label :name %><br />
