users index page css

--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -185,3 +185,15 @@ div.field, div.actions {
 }
 
 
+
+/* user index page */
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
+
+
