--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -25,6 +25,6 @@
 
 <div>
 	<%= gravatar_for @user %>
-	<a href="http://gravatar.com/emails">change</a>
+	<a href="http://gravatar.com/emails" target="_blank">change</a>
 </div>
 
