--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,15 +1,22 @@
 <table class="profile" summary="Profile information">
 	<tr>
-		<td>
+		<td class="main">
 			<h1>
 				<%= gravatar_for @user %>
 				<%= @user.name %>
 			</h1>
+			<% unless @user.microposts.empty? %>
+				<table class="microposts" summary="User microposts">
+					<%= render @microposts %>
+				</table>
+				<%= will_paginate @microposts %>
+			<% end %>
 		</td>
 		<td class="sidebar round">
 			<!-- user_path(@user) returns '/users/1' in case of 1st user -->
 			<strong>Name</strong> <%= @user.name %><br />
 			<strong>URL</strong> <%= link_to user_path(@user), @user %>
+			<strong>Microposts</strong> <%= @user.microposts.count %>
 		</td>
 	</tr>
 </table>
