--- a/app/views/microposts/_micropost.html.erb
+++ b/app/views/microposts/_micropost.html.erb
@@ -2,7 +2,7 @@
 	<td class="micropost">
 		<span class="content"><%= micropost.content %></span>
 		<span class="timestamp">
-			Posted <%= time_age_in_words(micropost.created_at) %> ago.
+			Posted <%= time_ago_in_words(micropost.created_at) %> ago.
 		</span>
 	</td>
 </tr>
