--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,7 +15,7 @@
 		<td class="sidebar round">
 			<!-- user_path(@user) returns '/users/1' in case of 1st user -->
 			<strong>Name</strong> <%= @user.name %><br />
-			<strong>URL</strong> <%= link_to user_path(@user), @user %>
+			<strong>URL</strong> <%= link_to user_path(@user), @user %><br />
 			<strong>Microposts</strong> <%= @user.microposts.count %>
 		</td>
 	</tr>
